Add DTBs for imx6ul/6ull/6ulz [YOCIMX-6960]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -177,12 +177,33 @@ MACHINE_FEATURES:append:imx6sxsabresd = " optee"
 
 # Overrides for imx6ulevk.conf
 MACHINE_FEATURES:append:imx6ulevk = " optee"
+KERNEL_DEVICETREE:append:imx6ulevk = " \
+                     imx6ul-14x14-evk-revd.dtb \
+                     imx6ul-14x14-evk-revd-csi.dtb \
+                     imx6ul-14x14-evk-revd-btwifi.dtb \
+                     imx6ul-14x14-evk-revd-ecspi-slave.dtb \
+                     imx6ul-14x14-evk-revd-ecspi.dtb \
+                     imx6ul-14x14-evk-revd-emmc.dtb \
+                     imx6ul-14x14-evk-revd-gpmi-weim.dtb \
+"
 
 # Overrides for imx6ullevk.conf
 MACHINE_FEATURES:append:imx6ullevk = " optee"
+KERNEL_DEVICETREE:append:imx6ullevk = " \
+                     imx6ull-14x14-evk-revd.dtb \
+                     imx6ull-14x14-evk-revd-btwifi.dtb \
+                     imx6ull-14x14-evk-revd-emmc.dtb \
+                     imx6ull-14x14-evk-revd-gpmi-weim.dtb \
+"
 
 # Overrides for imx6ulz-14x14-evk.conf
 MACHINE_FEATURES:append:imx6ulz-14x14-evk = " optee"
+KERNEL_DEVICETREE:append:imx6ulz-14x14-evk = " \
+                     imx6ulz-14x14-evk-revd.dtb \
+                     imx6ulz-14x14-evk-revd-btwifi.dtb \
+                     imx6ulz-14x14-evk-revd-emmc.dtb \
+                     imx6ulz-14x14-evk-revd-gpmi-weim.dtb \
+"
 
 # Overrides for imx7dsabresd.conf
 MACHINE_FEATURES:append:imx7dsabresd = " optee"
