--- a/meta-bsp/conf/machine/imx6ul7d.conf
+++ b/meta-bsp/conf/machine/imx6ul7d.conf
@@ -19,6 +19,13 @@ KERNEL_DEVICETREE = "imx6ul-14x14-evk-csi.dtb imx6ul-14x14-evk.dtb \
                      imx6ul-14x14-evk-btwifi-sdio3_0.dtb \
                      imx6ul-14x14-evk-ecspi.dtb imx6ul-14x14-evk-ecspi-slave.dtb \
                      imx6ul-14x14-evk-emmc.dtb imx6ul-14x14-evk-gpmi-weim.dtb \
+                     imx6ul-14x14-evk-revd.dtb \
+                     imx6ul-14x14-evk-revd-csi.dtb \
+                     imx6ul-14x14-evk-revd-btwifi.dtb \
+                     imx6ul-14x14-evk-revd-ecspi-slave.dtb \
+                     imx6ul-14x14-evk-revd-ecspi.dtb \
+                     imx6ul-14x14-evk-revd-emmc.dtb \
+                     imx6ul-14x14-evk-revd-gpmi-weim.dtb \
                      imx6ul-9x9-evk.dtb imx6ul-9x9-evk-ldo.dtb imx6ul-9x9-evk-btwifi.dtb \
                      imx6ul-9x9-evk-btwifi-sdio3_0.dtb \
                      imx7d-sdb.dtb imx7d-sdb-epdc.dtb imx7d-sdb-gpmi-weim.dtb \
@@ -31,6 +38,10 @@ KERNEL_DEVICETREE += "imx6ull-14x14-evk.dtb imx6ull-14x14-evk-btwifi.dtb \
                      imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
                      imx6ull-14x14-evk-emmc.dtb \
                      imx6ull-14x14-evk-gpmi-weim.dtb \
+                     imx6ull-14x14-evk-revd.dtb \
+                     imx6ull-14x14-evk-revd-btwifi.dtb \
+                     imx6ull-14x14-evk-revd-emmc.dtb \
+                     imx6ull-14x14-evk-revd-gpmi-weim.dtb \
                      imx6ull-9x9-evk.dtb imx6ull-9x9-evk-btwifi.dtb \
                      imx6ull-9x9-evk-btwifi-sdio3_0.dtb \
                      imx6ull-9x9-evk-ldo.dtb \
@@ -40,6 +51,10 @@ KERNEL_DEVICETREE += "imx6ull-14x14-evk.dtb imx6ull-14x14-evk-btwifi.dtb \
 KERNEL_DEVICETREE += "imx6ulz-14x14-evk.dtb  imx6ulz-14x14-evk-btwifi.dtb \
                      imx6ulz-14x14-evk-btwifi-sdio3_0.dtb \
                      imx6ulz-14x14-evk-emmc.dtb imx6ulz-14x14-evk-gpmi-weim.dtb \
+                     imx6ulz-14x14-evk-revd.dtb \
+                     imx6ulz-14x14-evk-revd-btwifi.dtb \
+                     imx6ulz-14x14-evk-revd-emmc.dtb \
+                     imx6ulz-14x14-evk-revd-gpmi-weim.dtb \
 "
 
 #imx7d val
