imx6ul*: Fix KERNEL_DEVICETREE whitespace and order
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/machine/imx6ul7d.conf
+++ b/meta-bsp/conf/machine/imx6ul7d.conf
@@ -14,47 +14,66 @@ require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 # Install epdc firmware for i.MX7D
 MACHINE_FIRMWARE:append = " firmware-imx-epdc"
 
-KERNEL_DEVICETREE = "imx6ul-14x14-evk-csi.dtb imx6ul-14x14-evk.dtb \
-                     imx6ul-14x14-evk-btwifi.dtb \
-                     imx6ul-14x14-evk-btwifi-sdio3_0.dtb \
-                     imx6ul-14x14-evk-ecspi.dtb imx6ul-14x14-evk-ecspi-slave.dtb \
-                     imx6ul-14x14-evk-emmc.dtb imx6ul-14x14-evk-gpmi-weim.dtb \
-                     imx6ul-14x14-evk-revd.dtb \
-                     imx6ul-14x14-evk-revd-csi.dtb \
-                     imx6ul-14x14-evk-revd-btwifi.dtb \
-                     imx6ul-14x14-evk-revd-ecspi-slave.dtb \
-                     imx6ul-14x14-evk-revd-ecspi.dtb \
-                     imx6ul-14x14-evk-revd-emmc.dtb \
-                     imx6ul-14x14-evk-revd-gpmi-weim.dtb \
-                     imx6ul-9x9-evk.dtb imx6ul-9x9-evk-ldo.dtb imx6ul-9x9-evk-btwifi.dtb \
-                     imx6ul-9x9-evk-btwifi-sdio3_0.dtb \
-                     imx7d-sdb.dtb imx7d-sdb-epdc.dtb imx7d-sdb-gpmi-weim.dtb \
-                     imx7d-sdb-m4.dtb imx7d-sdb-mipi-dsi.dtb imx7d-sdb-pcie-ep.dtb imx7d-sdb-qspi.dtb \
-                     imx7d-sdb-reva.dtb  imx7d-sdb-usd-wifi.dtb imx7d-sdb-mqs.dtb \
+KERNEL_DEVICETREE = "
+    imx6ul-14x14-evk.dtb \
+    imx6ul-14x14-evk-btwifi.dtb \
+    imx6ul-14x14-evk-btwifi-sdio3_0.dtb \
+    imx6ul-14x14-evk-csi.dtb \
+    imx6ul-14x14-evk-ecspi.dtb \
+    imx6ul-14x14-evk-ecspi-slave.dtb \
+    imx6ul-14x14-evk-emmc.dtb \
+    imx6ul-14x14-evk-gpmi-weim.dtb \
+    imx6ul-14x14-evk-revd.dtb \
+    imx6ul-14x14-evk-revd-btwifi.dtb \
+    imx6ul-14x14-evk-revd-csi.dtb \
+    imx6ul-14x14-evk-revd-ecspi.dtb \
+    imx6ul-14x14-evk-revd-ecspi-slave.dtb \
+    imx6ul-14x14-evk-revd-emmc.dtb \
+    imx6ul-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ul-9x9-evk.dtb \
+    imx6ul-9x9-evk-btwifi.dtb \
+    imx6ul-9x9-evk-btwifi-sdio3_0.dtb \
+    imx6ul-9x9-evk-ldo.dtb \
+    imx7d-sdb.dtb \
+    imx7d-sdb-epdc.dtb \
+    imx7d-sdb-gpmi-weim.dtb \
+    imx7d-sdb-m4.dtb \
+    imx7d-sdb-mipi-dsi.dtb \
+    imx7d-sdb-mqs.dtb \
+    imx7d-sdb-pcie-ep.dtb \
+    imx7d-sdb-qspi.dtb \
+    imx7d-sdb-reva.dtb \
+    imx7d-sdb-usd-wifi.dtb \
 "
 
 #i.MX6ULL
-KERNEL_DEVICETREE += "imx6ull-14x14-evk.dtb imx6ull-14x14-evk-btwifi.dtb \
-                     imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
-                     imx6ull-14x14-evk-emmc.dtb \
-                     imx6ull-14x14-evk-gpmi-weim.dtb \
-                     imx6ull-14x14-evk-revd.dtb \
-                     imx6ull-14x14-evk-revd-btwifi.dtb \
-                     imx6ull-14x14-evk-revd-emmc.dtb \
-                     imx6ull-14x14-evk-revd-gpmi-weim.dtb \
-                     imx6ull-9x9-evk.dtb imx6ull-9x9-evk-btwifi.dtb \
-                     imx6ull-9x9-evk-btwifi-sdio3_0.dtb \
-                     imx6ull-9x9-evk-ldo.dtb \
+KERNEL_DEVICETREE += "
+    imx6ull-14x14-evk.dtb \
+    imx6ull-14x14-evk-btwifi.dtb \
+    imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
+    imx6ull-14x14-evk-emmc.dtb \
+    imx6ull-14x14-evk-gpmi-weim.dtb \
+    imx6ull-14x14-evk-revd.dtb \
+    imx6ull-14x14-evk-revd-btwifi.dtb \
+    imx6ull-14x14-evk-revd-emmc.dtb \
+    imx6ull-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ull-9x9-evk.dtb \
+    imx6ull-9x9-evk-btwifi.dtb \
+    imx6ull-9x9-evk-btwifi-sdio3_0.dtb \
+    imx6ull-9x9-evk-ldo.dtb \
 "
 
 #i.MX6ULZ
-KERNEL_DEVICETREE += "imx6ulz-14x14-evk.dtb  imx6ulz-14x14-evk-btwifi.dtb \
-                     imx6ulz-14x14-evk-btwifi-sdio3_0.dtb \
-                     imx6ulz-14x14-evk-emmc.dtb imx6ulz-14x14-evk-gpmi-weim.dtb \
-                     imx6ulz-14x14-evk-revd.dtb \
-                     imx6ulz-14x14-evk-revd-btwifi.dtb \
-                     imx6ulz-14x14-evk-revd-emmc.dtb \
-                     imx6ulz-14x14-evk-revd-gpmi-weim.dtb \
+KERNEL_DEVICETREE += "
+    imx6ulz-14x14-evk.dtb \
+    imx6ulz-14x14-evk-btwifi.dtb \
+    imx6ulz-14x14-evk-btwifi-sdio3_0.dtb \
+    imx6ulz-14x14-evk-emmc.dtb \
+    imx6ulz-14x14-evk-gpmi-weim.dtb \
+    imx6ulz-14x14-evk-revd.dtb \
+    imx6ulz-14x14-evk-revd-btwifi.dtb \
+    imx6ulz-14x14-evk-revd-emmc.dtb \
+    imx6ulz-14x14-evk-revd-gpmi-weim.dtb \
 "
 
 #imx7d val
