--- a/meta-bsp/conf/machine/imx6ull9x9evk.conf
+++ b/meta-bsp/conf/machine/imx6ull9x9evk.conf
@@ -11,9 +11,11 @@ include conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
 MACHINE_FIRMWARE:append = " firmware-imx-epdc"
 
-KERNEL_DEVICETREE = "imx6ull-9x9-evk.dtb imx6ull-9x9-evk-btwifi.dtb \
-                     imx6ull-9x9-evk-btwifi-sdio3_0.dtb \
-                     imx6ull-9x9-evk-ldo.dtb"
+KERNEL_DEVICETREE = " \
+    imx6ull-9x9-evk.dtb \
+    imx6ull-9x9-evk-btwifi.dtb \
+    imx6ull-9x9-evk-btwifi-sdio3_0.dtb \
+    imx6ull-9x9-evk-ldo.dtb"
 
 UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
 UBOOT_CONFIG[sd] = "mx6ull_9x9_evk_config,sdcard"
