--- a/meta-bsp/conf/machine/imx6ul9x9evk.conf
+++ b/meta-bsp/conf/machine/imx6ul9x9evk.conf
@@ -9,8 +9,11 @@ MACHINEOVERRIDES =. "mx6:mx6ul:"
 include conf/machine/include/imx-base.inc
 include conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
-KERNEL_DEVICETREE = "imx6ul-9x9-evk.dtb imx6ul-9x9-evk-ldo.dtb imx6ul-9x9-evk-btwifi.dtb \
-                     imx6ul-9x9-evk-btwifi-sdio3_0.dtb \
+KERNEL_DEVICETREE = " \
+    imx6ul-9x9-evk.dtb \
+    imx6ul-9x9-evk-btwifi.dtb \
+    imx6ul-9x9-evk-btwifi-sdio3_0.dtb \
+    imx6ul-9x9-evk-ldo.dtb \
 "
 
 UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
