imx6ul*.conf: Drop separate btwifi-sdio3_0 dtb [LF-8794]
SDIO2.0 and SDIO3.0 are now combined in one dtb.

Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -177,6 +177,9 @@ MACHINE_FEATURES:append:imx6sxsabresd = " optee"
 
 # Overrides for imx6ulevk.conf
 MACHINE_FEATURES:append:imx6ulevk = " optee"
+KERNEL_DEVICETREE:remove:imx6ulevk = " \
+    imx6ul-14x14-evk-btwifi-sdio3_0.dtb \
+"
 KERNEL_DEVICETREE:append:imx6ulevk = " \
     imx6ul-14x14-evk-revd.dtb \
     imx6ul-14x14-evk-revd-csi.dtb \
@@ -189,6 +192,9 @@ KERNEL_DEVICETREE:append:imx6ulevk = " \
 
 # Overrides for imx6ullevk.conf
 MACHINE_FEATURES:append:imx6ullevk = " optee"
+KERNEL_DEVICETREE:remove:imx6ullevk = " \
+    imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
+"
 KERNEL_DEVICETREE:append:imx6ullevk = " \
     imx6ull-14x14-evk-revd.dtb \
     imx6ull-14x14-evk-revd-btwifi.dtb \
@@ -198,6 +204,9 @@ KERNEL_DEVICETREE:append:imx6ullevk = " \
 
 # Overrides for imx6ulz-14x14-evk.conf
 MACHINE_FEATURES:append:imx6ulz-14x14-evk = " optee"
+KERNEL_DEVICETREE:remove:imx6ulz-14x14-evk = " \
+    imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
+"
 KERNEL_DEVICETREE:append:imx6ulz-14x14-evk = " \
     imx6ulz-14x14-evk-revd.dtb \
     imx6ulz-14x14-evk-revd-btwifi.dtb \
