imx6ul7d: Fix syntax error
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/machine/imx6ul7d.conf
+++ b/meta-bsp/conf/machine/imx6ul7d.conf
@@ -14,7 +14,7 @@ require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 # Install epdc firmware for i.MX7D
 MACHINE_FIRMWARE:append = " firmware-imx-epdc"
 
-KERNEL_DEVICETREE = "
+KERNEL_DEVICETREE = " \
     imx6ul-14x14-evk.dtb \
     imx6ul-14x14-evk-btwifi.dtb \
     imx6ul-14x14-evk-csi.dtb \
@@ -45,7 +45,7 @@ KERNEL_DEVICETREE = "
 "
 
 #i.MX6ULL
-KERNEL_DEVICETREE += "
+KERNEL_DEVICETREE += " \
     imx6ull-14x14-evk.dtb \
     imx6ull-14x14-evk-btwifi.dtb \
     imx6ull-14x14-evk-emmc.dtb \
@@ -60,7 +60,7 @@ KERNEL_DEVICETREE += "
 "
 
 #i.MX6ULZ
-KERNEL_DEVICETREE += "
+KERNEL_DEVICETREE += " \
     imx6ulz-14x14-evk.dtb \
     imx6ulz-14x14-evk-btwifi.dtb \
     imx6ulz-14x14-evk-emmc.dtb \
