--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PRIORITY_fsl-bsp-release = "8"
 LAYERSERIES_COMPAT_fsl-bsp-release = "mickledore"
 
 # FIXME: Drop these lines when the external layers are marked compatible
-LAYERSERIES_COMPAT_chromium-browser-layer:append = " langdale"
+LAYERSERIES_COMPAT_chromium-browser-layer:append = " langdale mickledore"
 LAYERSERIES_COMPAT_imx-demo:append = " mickledore"
 
 # Define new EULAs and add them to the list defined in meta-freescale.
