imx93-14x14-lpddr4x-evk.conf: Add flexspi bootloader build [YOCIMX-6997]
- Add fspi to UBOOT_CONFIG.
- Build imx-boot target flash_singleboot_flexspi.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
+++ b/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
@@ -18,6 +18,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
 "
 
 UBOOT_CONFIG_BASENAME = "imx93_14x14_evk"
+IMXBOOT_TARGETS_BASENAME = "flash_singleboot"
 
 DDR_FIRMWARE_NAME = " \
     lpddr4_dmem_1d_v202201.bin \
@@ -25,3 +26,7 @@ DDR_FIRMWARE_NAME = " \
     lpddr4_imem_1d_v202201.bin \
     lpddr4_imem_2d_v202201.bin \
 "
+
+UBOOT_CONFIG[fspi]   = "${UBOOT_CONFIG_BASENAME}_defconfig"
+
+IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', '${IMXBOOT_TARGETS_BASENAME}_flexspi', '${IMXBOOT_TARGETS_BASENAME}', d)}"
