layer.conf/imx8_all.conf: Add two dtbs on imx93 to support LPA and LPV [YOCIMX-7012]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -433,6 +433,8 @@ MACHINE_FEATURES:append:imx93-11x11-lpddr4x-evk = " dpdk"
 MACHINE_FIRMWARE:append:imx93-11x11-lpddr4x-evk = " ethos-u-firmware"
 KERNEL_DEVICETREE:append:imx93-11x11-lpddr4x-evk = " \
     freescale/imx93-11x11-evk-ld.dtb \
+    freescale/imx93-11x11-evk-rpmsg.dtb \
+    freescale/imx93-11x11-evk-rpmsg-lpv.dtb \
 "
 WKS_FILE_DEPENDS:append:imx93-11x11-lpddr4x-evk = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
