--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -262,6 +262,8 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-11x11-evk-mt9m114.dtb \
                       freescale/imx93-11x11-evk-root.dtb \
                       freescale/imx93-11x11-evk-rm67199.dtb \
+                      freescale/imx93-11x11-evk-rpmsg.dtb \
+                      freescale/imx93-11x11-evk-rpmsg-lpv.dtb \
                       freescale/imx93-14x14-evk.dtb \
                       freescale/imx93-14x14-evk-aud-hat.dtb \
                       freescale/imx93-14x14-evk-tja1103.dtb \
