imx93evk.conf/imx8_all.conf: Add i.MX 93 QSB DTB to support AUD-HAT [YOCIMX-7027]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/machine/imx93evk.conf
+++ b/meta-bsp/conf/machine/imx93evk.conf
@@ -15,6 +15,7 @@ KERNEL_DEVICETREE += " \
         freescale/imx93-14x14-evk-mqs.dtb \
         freescale/imx93-14x14-evk-rm67199.dtb \
         freescale/imx93-9x9-qsb.dtb \
+        freescale/imx93-9x9-qsb-aud-hat.dtb \
         freescale/imx93-9x9-qsb-can1.dtb \
         freescale/imx93-9x9-qsb-flexspi-m2.dtb \
         freescale/imx93-9x9-qsb-i3c.dtb \
