--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -409,11 +409,15 @@ IMXBOOT_TARGETS_SD:prepend:imx8dxlb0-ddr3l-evk = \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8ulp-lpddr4-evk.conf
+MACHINE_FEATURES:append:imx8ulp-lpddr4-evk = " soc-reva2"
+MACHINE_FEATURES:remove:imx8ulp-lpddr4-evk = " soc-reva1"
 IMXBOOT_TARGETS_SD:imx8ulp-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
 IMXBOOT_TARGETS_FSPI:imx8ulp-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-lpddr4-evk   = "flash_singleboot_m33"
 
 # Overrides for imx8ulp-9x9-lpddr4-evk.conf
+MACHINE_FEATURES:append:imx8ulp-9x9-lpddr4-evk = " soc-reva2"
+MACHINE_FEATURES:remove:imx8ulp-9x9-lpddr4-evk = " soc-reva1"
 IMXBOOT_TARGETS_SD:imx8ulp-9x9-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
 IMXBOOT_TARGETS_FSPI:imx8ulp-9x9-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-9x9-lpddr4-evk   = "flash_singleboot_m33"
