imx93evk.conf: Deploy mcore demo apps to boot partition [YOCIMX-7029]
MCore demo app for both EVK and QSB should deploy to this consolidated wic image.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx93evk.conf
+++ b/meta-bsp/conf/machine/imx93evk.conf
@@ -24,3 +24,9 @@ KERNEL_DEVICETREE += " \
         freescale/imx93-9x9-qsb-mt9m114.dtb \
         freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
 "
+
+IMAGE_BOOT_FILES:append = " \
+    imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
+    imx93-9x9-qsb_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+"
