imx8qmmek/imx8_all: Add dtb for new 8QM re-design [YOCIMX-7038]
Signed-off-by: Neena Busireddy <neenareddy.busireddy@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -178,6 +178,25 @@ KERNEL_DEVICETREE += "freescale/imx8qm-mek.dtb \
                      freescale/imx8qm-pcieax2pciebx1.dtb \
                      freescale/imx8qm-mek-usd-wifi.dtb freescale/imx8qm-mek-usdhc3-m2.dtb \
                      freescale/imx8qm-mek-sof.dtb \
+                     freescale/imx8qm-mek-revd-ca53.dtb \
+                     freescale/imx8qm-mek-revd-ca72.dtb \
+                     freescale/imx8qm-mek-revd-dsi-rm67191.dtb \
+                     freescale/imx8qm-mek-revd-dsi-rm67199.dtb \
+                     freescale/imx8qm-mek-revd.dtb \
+                     freescale/imx8qm-mek-revd-enet2-tja1100.dtb \
+                     freescale/imx8qm-mek-revd-esai.dtb \
+                     freescale/imx8qm-mek-revd-hdmi.dtb \
+                     freescale/imx8qm-mek-revd-hdmi-rx.dtb \
+                     freescale/imx8qm-mek-revd-hdmi-rx-ov5640.dtb \
+                     freescale/imx8qm-mek-revd-jdi-wuxga-lvds1-panel.dtb \
+                     freescale/imx8qm-mek-revd-jdi-wuxga-lvds1-panel-rpmsg.dtb \
+                     freescale/imx8qm-mek-revd-ov5640.dtb \
+                     freescale/imx8qm-mek-revd-pcie-ep.dtb \
+                     freescale/imx8qm-mek-revd-root.dtb \
+                     freescale/imx8qm-mek-revd-rpmsg.dtb \
+                     freescale/imx8qm-mek-revd-sof-wm8962.dtb \
+                     freescale/imx8qm-mek-revd-usdhc3-m2.dtb \
+                     freescale/imx8qm-mek-revd-usd-wifi.dtb \
 "
 
 # DEVICETREE of i.MX 8QM Validation
