--- a/meta-bsp/conf/machine/imx8qmmek.conf
+++ b/meta-bsp/conf/machine/imx8qmmek.conf
@@ -1,3 +1,24 @@
 # DEPRECATED: Machine is renamed, please use imx8qm-mek
 MACHINEOVERRIDES =. "imx8qm-mek:"
 require conf/machine/imx8qm-mek.conf
+
+KERNEL_DEVICETREE += "freescale/imx8qm-mek-revd-ca53.dtb \
+                     freescale/imx8qm-mek-revd-ca72.dtb \
+                     freescale/imx8qm-mek-revd-dsi-rm67191.dtb \
+                     freescale/imx8qm-mek-revd-dsi-rm67199.dtb \
+                     freescale/imx8qm-mek-revd.dtb \
+                     freescale/imx8qm-mek-revd-enet2-tja1100.dtb \
+                     freescale/imx8qm-mek-revd-esai.dtb \
+                     freescale/imx8qm-mek-revd-hdmi.dtb \
+                     freescale/imx8qm-mek-revd-hdmi-rx.dtb \
+                     freescale/imx8qm-mek-revd-hdmi-rx-ov5640.dtb \
+                     freescale/imx8qm-mek-revd-jdi-wuxga-lvds1-panel.dtb \
+                     freescale/imx8qm-mek-revd-jdi-wuxga-lvds1-panel-rpmsg.dtb \
+                     freescale/imx8qm-mek-revd-ov5640.dtb \
+                     freescale/imx8qm-mek-revd-pcie-ep.dtb \
+                     freescale/imx8qm-mek-revd-root.dtb \
+                     freescale/imx8qm-mek-revd-rpmsg.dtb \
+                     freescale/imx8qm-mek-revd-sof-wm8962.dtb \
+                     freescale/imx8qm-mek-revd-usdhc3-m2.dtb \
+                     freescale/imx8qm-mek-revd-usd-wifi.dtb \
+"
