imx8_all.conf: Fix typo \ Signed-off-by: Valentin Jec <valentin.jec@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -266,7 +266,7 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-11x11-evk-rpmsg-lpv.dtb \
                       freescale/imx93-14x14-evk.dtb \
                       freescale/imx93-14x14-evk-aud-hat.dtb \
-                      freescale/imx93-14x14-evk-lvds-it6263.dtb
+                      freescale/imx93-14x14-evk-lvds-it6263.dtb \
                       freescale/imx93-14x14-evk-tja1103.dtb \
                       freescale/imx93-14x14-evk-mqs.dtb \
                       freescale/imx93-14x14-evk-rm67199.dtb \
