Add one imx93 QSB dtb to 2023 Q2 release [YOCIMX-7043]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -290,6 +290,7 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-14x14-evk-mqs.dtb \
                       freescale/imx93-14x14-evk-rm67199.dtb \
                       freescale/imx93-9x9-qsb.dtb \
+                      freescale/imx93-9x9-qsb-ld.dtb \
                       freescale/imx93-9x9-qsb-aud-hat.dtb \
                       freescale/imx93-9x9-qsb-can1.dtb \
                       freescale/imx93-9x9-qsb-flexspi-m2.dtb \
