imx6ul7d.conf: Add NXP Wi-Fi to MACHINE_FEATURES [YOCIMX-7962]
In this consolidated machine configure add NXP Wi-Fi features to
share rootfs to i.MX 6UL/6ULL/6ULZ/7D EVK boards.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx6ul7d.conf
+++ b/meta-bsp/conf/machine/imx6ul7d.conf
@@ -74,7 +74,7 @@ KERNEL_DEVICETREE += " \
 #imx7d val
 KERNEL_DEVICETREE += "imx7d-12x12-lpddr3-val.dtb imx7d-12x12-lpddr3-val-sai.dtb "
 
-MACHINE_FEATURES:append = " pci wifi bluetooth optee bcm4339 bcm43455"
+MACHINE_FEATURES:append = " pci wifi bluetooth optee bcm4339 bcm43455 nxp8801-sdio nxp8987-sdio nxpiw416-sdio nxpiw612-sdio"
 
 ##UBOOT_MACHINE = "mx6ul_14x14_evk_config"
 UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
