layer.conf: Replace linux-firmware-nxp89xx with firmware-nxp-wifi [YOCIMX-7062]
- Drop original MACHINE_FEATURES setting 'nxp8987/nxp8997/iw612'
- Add new setting 'nxp8987-sdio/nxp8997-pcie/nxpiw612-sdio/...' by
  each SoC supported list.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -96,13 +96,12 @@ MACHINE_FIRMWARE:append:mx8mpul-nxp-bsp  = " sof-imx sof-zephyr"
 MACHINE_FIRMWARE:append:mx8ulp-nxp-bsp = " sof-imx sof-zephyr"
 
 # NXP WiFi firmware & extra Wlan SDK
-MACHINE_FIRMWARE:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxp8987', 'linux-firmware-nxp89xx', '', d)}"
-MACHINE_FIRMWARE:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxp8997', 'linux-firmware-nxp89xx', '', d)}"
-MACHINE_FIRMWARE:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'iw612', 'linux-firmware-nxp89xx', '', d)}"
 MACHINE_EXTRA_RRECOMMENDS:remove = "kernel-module-nxp89xx"
-MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxp8987', 'nxp-wlan-sdk kernel-module-nxp-wlan', '', d)}"
-MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxp8997', 'nxp-wlan-sdk kernel-module-nxp-wlan', '', d)}"
-MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'iw612', 'nxp-wlan-sdk kernel-module-nxp-wlan', '', d)}"
+MACHINE_FIRMWARE:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw416-sdio', 'firmware-nxp-wifi-nxpiw416-sdio', '', d)}"
+MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw416-sdio', 'nxp-wlan-sdk kernel-module-nxp-wlan', '', d)}"
+
+MACHINE_FIRMWARE:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw612-sdio', 'firmware-nxp-wifi-nxpiw612-sdio', '', d)}"
+MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw612-sdio', 'nxp-wlan-sdk kernel-module-nxp-wlan', '', d)}"
 
 # MCore Demo apps to /lib/firmware
 MACHINE_EXTRA_RRECOMMENDS:append:mx7ulp-nxp-bsp  = " imx-m4-demos"
@@ -159,10 +158,6 @@ IMAGE_INSTALL:append = " \
 
 MACHINE_FEATURES_IMX_REMOVALS ?= "mrvl8997"
 MACHINE_FEATURES:remove        = "${MACHINE_FEATURES_IMX_REMOVALS}"
-MACHINE_FEATURES:append:mx6-nxp-bsp    = " nxp8987"
-MACHINE_FEATURES:append:mx7-nxp-bsp    = " nxp8987"
-MACHINE_FEATURES:append:mx8-nxp-bsp    = " nxp8987"
-MACHINE_FEATURES:append:mx8m-nxp-bsp    = " nxp8987"
 
 IMXBOOT_TARGETS:append:mx8m-nxp-bsp = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee stmm', ' flash_evk_stmm_capsule', \
@@ -193,7 +188,7 @@ KERNEL_DEVICETREE:append:imx6ulevk = " \
 "
 
 # Overrides for imx6ullevk.conf
-MACHINE_FEATURES:append:imx6ullevk = " optee"
+MACHINE_FEATURES:append:imx6ullevk = " optee nxpiw416-sdio nxpiw612-sdio"
 KERNEL_DEVICETREE:remove:imx6ullevk = " \
     imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
 "
@@ -262,6 +257,7 @@ IMAGE_BOOT_FILES:append:imx8mm-ddr4-evk = " \
 
 # Overrides for imx8mn-lpddr4-evk.conf
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mn-lpddr4-evk = " jailhouse"
+MACHINE_FEATURES:append:imx8mn-lpddr4-evk = " nxpiw612-sdio"
 WKS_FILE_DEPENDS:append:imx8mn-lpddr4-evk = " imx-m7-demos"
 IMAGE_BOOT_FILES:append:imx8mn-lpddr4-evk = " \
     imx8mn_m7_TCM_hello_world.bin \
@@ -272,6 +268,7 @@ IMAGE_BOOT_FILES:append:imx8mn-lpddr4-evk = " \
 
 # Overrides for imx8mn-ddr4-evk.conf
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mn-ddr4-evk = " jailhouse"
+MACHINE_FEATURES:append:imx8mn-ddr4-evk = " nxpiw612-sdio"
 WKS_FILE_DEPENDS:append:imx8mn-ddr4-evk = " imx-m7-demos"
 IMAGE_BOOT_FILES:append:imx8mn-ddr4-evk = " \
     imx8mn_m7_TCM_hello_world.bin \
@@ -282,6 +279,7 @@ IMAGE_BOOT_FILES:append:imx8mn-ddr4-evk = " \
 
 # Overrides for imx8mnul-ddr3l-evk.conf
 MACHINE_FEATURES_IMX_REMOVALS:append:imx8mnul-ddr3l-evk = " jailhouse"
+MACHINE_FEATURES:append:imx8mnul-ddr3l-evk = " nxpiw612-sdio"
 WKS_FILE_DEPENDS:append:imx8mnul-ddr3l-evk = " imx-m7-demos"
 IMAGE_BOOT_FILES:append:imx8mnul-ddr3l-evk = " \
     imx8mnddr3l_m7_TCM_hello_world.bin \
@@ -292,7 +290,7 @@ IMAGE_BOOT_FILES:append:imx8mnul-ddr3l-evk = " \
 
 # Overrides for imx8mp-lpddr4-evk
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mp-lpddr4-evk = " jailhouse"
-MACHINE_FEATURES:append:imx8mp-lpddr4-evk = " optee nxp8997 dpdk"
+MACHINE_FEATURES:append:imx8mp-lpddr4-evk = " optee dpdk"
 KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
     freescale/imx8mp-evk-revb4.dtb \
     freescale/imx8mp-evk-revb4-basler.dtb \
@@ -339,7 +337,7 @@ IMAGE_BOOT_FILES:append:imx8mp-lpddr4-evk = " \
 
 # Overrides for imx8mp-ddr4-evk
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mp-ddr4-evk = " jailhouse"
-MACHINE_FEATURES:append:imx8mp-ddr4-evk = " optee nxp8997 dpdk"
+MACHINE_FEATURES:append:imx8mp-ddr4-evk = " optee dpdk"
 KERNEL_DEVICETREE:append:imx8mp-ddr4-evk = " \
     freescale/imx8mp-ddr4-evk-revb4.dtb \
 "
@@ -353,7 +351,7 @@ IMAGE_BOOT_FILES:append:imx8mp-ddr4-evk = " \
 "
 
 # Overrides for imx8mq-evk.conf
-MACHINE_FEATURES:append:imx8mq-evk = " jailhouse nxp8997"
+MACHINE_FEATURES:append:imx8mq-evk = " jailhouse"
 WKS_FILE_DEPENDS:append:imx8mq-evk = " imx-m4-demos"
 IMAGE_BOOT_FILES:append:imx8mq-evk = " \
     imx8mq_m4_TCM_hello_world.bin \
@@ -362,63 +360,57 @@ IMAGE_BOOT_FILES:append:imx8mq-evk = " \
 "
 
 # Overrides for imx8qm-mek.conf
-MACHINE_FEATURES:append:imx8qm-mek = " nxp8997"
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8qm-mek = ""
 IMXBOOT_TARGETS_SD:prepend:imx8qm-mek = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4', \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8qxp-mek.conf
-MACHINE_FEATURES:append:imx8qxp-mek = " nxp8997"
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8qxp-mek = ""
 IMXBOOT_TARGETS_SD:prepend:imx8qxp-mek = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4', \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8dxla1-lpddr4-evk.conf
-MACHINE_FEATURES:append:imx8dxla1-lpddr4-evk = " nxp8997"
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxla1-lpddr4-evk = ""
 IMXBOOT_TARGETS_SD:prepend:imx8dxla1-lpddr4-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x ', \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8dxlb0-lpddr4-evk.conf
-MACHINE_FEATURES:append:imx8dxlb0-lpddr4-evk = " nxp8997"
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxlb0-lpddr4-evk = ""
 IMXBOOT_TARGETS_SD:prepend:imx8dxlb0-lpddr4-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x ', \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8dxla1-ddr3l-evk.conf
-MACHINE_FEATURES:append:imx8dxla1-ddr3l-evk = " nxp8997"
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxla1-ddr3l-evk = ""
 IMXBOOT_TARGETS_SD:prepend:imx8dxla1-ddr3l-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x', \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8dxlb0-ddr3l-evk.conf
-MACHINE_FEATURES:append:imx8dxlb0-ddr3l-evk = " nxp8997"
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxlb0-ddr3l-evk = ""
 IMXBOOT_TARGETS_SD:prepend:imx8dxlb0-ddr3l-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x', \
                                                        'flash_regression_linux_m4', d)} "
 
 # Overrides for imx8ulp-lpddr4-evk.conf
-MACHINE_FEATURES:append:imx8ulp-lpddr4-evk = " soc-reva2"
+MACHINE_FEATURES:append:imx8ulp-lpddr4-evk = " soc-reva2 nxpiw416-sdio"
 MACHINE_FEATURES:remove:imx8ulp-lpddr4-evk = " soc-reva1"
 IMXBOOT_TARGETS_SD:imx8ulp-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
 IMXBOOT_TARGETS_FSPI:imx8ulp-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-lpddr4-evk   = "flash_singleboot_m33"
 
 # Overrides for imx8ulp-9x9-lpddr4-evk.conf
-MACHINE_FEATURES:append:imx8ulp-9x9-lpddr4-evk = " soc-reva2"
+MACHINE_FEATURES:append:imx8ulp-9x9-lpddr4-evk = " soc-reva2 nxpiw416-sdio"
 MACHINE_FEATURES:remove:imx8ulp-9x9-lpddr4-evk = " soc-reva1"
 IMXBOOT_TARGETS_SD:imx8ulp-9x9-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
 IMXBOOT_TARGETS_FSPI:imx8ulp-9x9-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-9x9-lpddr4-evk   = "flash_singleboot_m33"
 
 # Overrides for imx93-9x9-lpddr4-qsb.conf
-MACHINE_FEATURES:append:imx93-9x9-lpddr4-qsb = " dpdk"
+MACHINE_FEATURES:append:imx93-9x9-lpddr4-qsb = " dpdk nxpiw612-sdio"
 MACHINE_FIRMWARE:append:imx93-9x9-lpddr4-qsb = " ethos-u-firmware"
 WKS_FILE_DEPENDS:append:imx93-9x9-lpddr4-qsb = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
@@ -428,7 +420,7 @@ IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
 "
 
 # Overrides for imx93-11x11-lpddr4x-evk.conf
-MACHINE_FEATURES:append:imx93-11x11-lpddr4x-evk = " dpdk"
+MACHINE_FEATURES:append:imx93-11x11-lpddr4x-evk = " dpdk nxpiw612-sdio"
 MACHINE_FIRMWARE:append:imx93-11x11-lpddr4x-evk = " ethos-u-firmware"
 KERNEL_DEVICETREE:append:imx93-11x11-lpddr4x-evk = " \
     freescale/imx93-11x11-evk-ld.dtb \
@@ -445,7 +437,7 @@ IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
 "
 
 # Overrides for imx93-14x14-lpddr4x-evk.conf
-MACHINE_FEATURES:append:imx93-14x14-lpddr4x-evk = " dpdk"
+MACHINE_FEATURES:append:imx93-14x14-lpddr4x-evk = " dpdk nxpiw612-sdio"
 MACHINE_FIRMWARE:append:imx93-14x14-lpddr4x-evk = " ethos-u-firmware"
 WKS_FILE_DEPENDS:append:imx93-14x14-lpddr4x-evk = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-14x14-lpddr4x-evk = " \
