imx-boot: Switch to i.MX 93 to A1 [YOCIMX-7116]
- Use option REV=A1 in mkimage command line.
- Switch to use A1 ELE firmware.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -44,6 +44,7 @@ MACHINE_USES_VIVANTE_KERNEL_DRIVER_MODULE ?= "0"
 SECO_FIRMWARE_NAME:mx8dxl-generic-bsp = "mx8dxl${IMX_SOC_REV_LOWER}-ahab-container.img"
 SECO_FIRMWARE_NAME:mx8ulp-generic-bsp = "mx8ulpa2-ahab-container.img"
 SECO_FIRMWARE_NAME:mx91p-generic-bsp ?= "mx93a1-ahab-container.img"
+SECO_FIRMWARE_NAME:mx93-generic-bsp ?= "mx93a1-ahab-container.img"
 
 # Overrides for imx-base.inc
 IMX_DEFAULT_BSP = "nxp"
