meta-bsp: layer.conf: Provide UBOOT defaults instead overrides
Commit 2655f05405d73fac91a7ddd81cef0b9433f2b72d
turns the definition of default values for
UBOOT_MAKE_TARGET and UBOOT_SUFFIX to overrides.

Overrides are not good because they can't be redefined easily.
(Values need to be changed if using customized u-boot-imx.)

Defining default values is sufficient here.

Signed-off-by: Atanas Bunchev <atanas.bunchev@konsulko.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -58,16 +58,16 @@ IMX_DEFAULT_BSP = "nxp"
 # override it here.
 IMX_DEFAULT_BOOTLOADER:imx-nxp-bsp = "u-boot-imx"
 
-UBOOT_MAKE_TARGET:pn-u-boot-imx:mx6-nxp-bsp = "u-boot.imx"
-UBOOT_MAKE_TARGET:pn-u-boot-imx:mx7-nxp-bsp = "u-boot.imx"
-UBOOT_SUFFIX:pn-u-boot-imx:mx6-nxp-bsp = "imx"
-UBOOT_SUFFIX:pn-u-boot-imx:mx7-nxp-bsp = "imx"
-UBOOT_SUFFIX:pn-u-boot-imx:mx8-nxp-bsp = "bin"
-UBOOT_MAKE_TARGET:pn-u-boot-imx-mfgtool:mx6-nxp-bsp = "u-boot.imx"
-UBOOT_MAKE_TARGET:pn-u-boot-imx-mfgtool:mx7-nxp-bsp = "u-boot.imx"
-UBOOT_SUFFIX:pn-u-boot-imx-mfgtool:mx6-nxp-bsp = "imx"
-UBOOT_SUFFIX:pn-u-boot-imx-mfgtool:mx7-nxp-bsp = "imx"
-UBOOT_SUFFIX:pn-u-boot-imx-mfgtool:mx8-nxp-bsp = "bin"
+UBOOT_MAKE_TARGET:pn-u-boot-imx:mx6-nxp-bsp ?= "u-boot.imx"
+UBOOT_MAKE_TARGET:pn-u-boot-imx:mx7-nxp-bsp ?= "u-boot.imx"
+UBOOT_SUFFIX:pn-u-boot-imx:mx6-nxp-bsp ?= "imx"
+UBOOT_SUFFIX:pn-u-boot-imx:mx7-nxp-bsp ?= "imx"
+UBOOT_SUFFIX:pn-u-boot-imx:mx8-nxp-bsp ?= "bin"
+UBOOT_MAKE_TARGET:pn-u-boot-imx-mfgtool:mx6-nxp-bsp ?= "u-boot.imx"
+UBOOT_MAKE_TARGET:pn-u-boot-imx-mfgtool:mx7-nxp-bsp ?= "u-boot.imx"
+UBOOT_SUFFIX:pn-u-boot-imx-mfgtool:mx6-nxp-bsp ?= "imx"
+UBOOT_SUFFIX:pn-u-boot-imx-mfgtool:mx7-nxp-bsp ?= "imx"
+UBOOT_SUFFIX:pn-u-boot-imx-mfgtool:mx8-nxp-bsp ?= "bin"
 
 IMX_DEFAULT_UBOOTTOOLS = "u-boot-imx-tools"
 PREFERRED_PROVIDER_u-boot-tools-native = "${IMX_DEFAULT_UBOOTTOOLS}-native"
