--- a/meta-bsp/conf/machine/imx8qxpc0mek.conf
+++ b/meta-bsp/conf/machine/imx8qxpc0mek.conf
@@ -21,3 +21,5 @@ KERNEL_DEVICETREE += " \
     freescale/imx8dx-mek-ov5640-rpmsg.dtb \
     freescale/imx8dx-mek-rpmsg.dtb \
 "
+
+UBOOT_CONFIG[mfgtool] = "${UBOOT_CONFIG_BASENAME}_defconfig"
