--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -191,13 +191,13 @@ KERNEL_DEVICETREE:remove:imx6ulevk = " \
     imx6ul-14x14-evk-btwifi-sdio3_0.dtb \
 "
 KERNEL_DEVICETREE:append:imx6ulevk = " \
-    imx6ul-14x14-evk-revd.dtb \
-    imx6ul-14x14-evk-revd-csi.dtb \
-    imx6ul-14x14-evk-revd-btwifi.dtb \
-    imx6ul-14x14-evk-revd-ecspi-slave.dtb \
-    imx6ul-14x14-evk-revd-ecspi.dtb \
-    imx6ul-14x14-evk-revd-emmc.dtb \
-    imx6ul-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ul-14x14-evk-reve.dtb \
+    imx6ul-14x14-evk-reve-csi.dtb \
+    imx6ul-14x14-evk-reve-btwifi.dtb \
+    imx6ul-14x14-evk-reve-ecspi-slave.dtb \
+    imx6ul-14x14-evk-reve-ecspi.dtb \
+    imx6ul-14x14-evk-reve-emmc.dtb \
+    imx6ul-14x14-evk-reve-gpmi-weim.dtb \
 "
 
 # Overrides for imx6ullevk.conf
@@ -206,10 +206,10 @@ KERNEL_DEVICETREE:remove:imx6ullevk = " \
     imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
 "
 KERNEL_DEVICETREE:append:imx6ullevk = " \
-    imx6ull-14x14-evk-revd.dtb \
-    imx6ull-14x14-evk-revd-btwifi.dtb \
-    imx6ull-14x14-evk-revd-emmc.dtb \
-    imx6ull-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ull-14x14-evk-reve.dtb \
+    imx6ull-14x14-evk-reve-btwifi.dtb \
+    imx6ull-14x14-evk-reve-emmc.dtb \
+    imx6ull-14x14-evk-reve-gpmi-weim.dtb \
 "
 
 # Overrides for imx6ulz-14x14-evk.conf
@@ -218,10 +218,10 @@ KERNEL_DEVICETREE:remove:imx6ulz-14x14-evk = " \
     imx6ull-14x14-evk-btwifi-sdio3_0.dtb \
 "
 KERNEL_DEVICETREE:append:imx6ulz-14x14-evk = " \
-    imx6ulz-14x14-evk-revd.dtb \
-    imx6ulz-14x14-evk-revd-btwifi.dtb \
-    imx6ulz-14x14-evk-revd-emmc.dtb \
-    imx6ulz-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ulz-14x14-evk-reve.dtb \
+    imx6ulz-14x14-evk-reve-btwifi.dtb \
+    imx6ulz-14x14-evk-reve-emmc.dtb \
+    imx6ulz-14x14-evk-reve-gpmi-weim.dtb \
 "
 
 # Overrides for imx7dsabresd.conf
