--- a/meta-bsp/conf/machine/imx6ul7d.conf
+++ b/meta-bsp/conf/machine/imx6ul7d.conf
@@ -22,13 +22,13 @@ KERNEL_DEVICETREE = " \
     imx6ul-14x14-evk-ecspi-slave.dtb \
     imx6ul-14x14-evk-emmc.dtb \
     imx6ul-14x14-evk-gpmi-weim.dtb \
-    imx6ul-14x14-evk-revd.dtb \
-    imx6ul-14x14-evk-revd-btwifi.dtb \
-    imx6ul-14x14-evk-revd-csi.dtb \
-    imx6ul-14x14-evk-revd-ecspi.dtb \
-    imx6ul-14x14-evk-revd-ecspi-slave.dtb \
-    imx6ul-14x14-evk-revd-emmc.dtb \
-    imx6ul-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ul-14x14-evk-reve.dtb \
+    imx6ul-14x14-evk-reve-btwifi.dtb \
+    imx6ul-14x14-evk-reve-csi.dtb \
+    imx6ul-14x14-evk-reve-ecspi.dtb \
+    imx6ul-14x14-evk-reve-ecspi-slave.dtb \
+    imx6ul-14x14-evk-reve-emmc.dtb \
+    imx6ul-14x14-evk-reve-gpmi-weim.dtb \
     imx6ul-9x9-evk.dtb \
     imx6ul-9x9-evk-btwifi.dtb \
     imx6ul-9x9-evk-ldo.dtb \
@@ -50,10 +50,10 @@ KERNEL_DEVICETREE += " \
     imx6ull-14x14-evk-btwifi.dtb \
     imx6ull-14x14-evk-emmc.dtb \
     imx6ull-14x14-evk-gpmi-weim.dtb \
-    imx6ull-14x14-evk-revd.dtb \
-    imx6ull-14x14-evk-revd-btwifi.dtb \
-    imx6ull-14x14-evk-revd-emmc.dtb \
-    imx6ull-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ull-14x14-evk-reve.dtb \
+    imx6ull-14x14-evk-reve-btwifi.dtb \
+    imx6ull-14x14-evk-reve-emmc.dtb \
+    imx6ull-14x14-evk-reve-gpmi-weim.dtb \
     imx6ull-9x9-evk.dtb \
     imx6ull-9x9-evk-btwifi.dtb \
     imx6ull-9x9-evk-ldo.dtb \
@@ -65,10 +65,10 @@ KERNEL_DEVICETREE += " \
     imx6ulz-14x14-evk-btwifi.dtb \
     imx6ulz-14x14-evk-emmc.dtb \
     imx6ulz-14x14-evk-gpmi-weim.dtb \
-    imx6ulz-14x14-evk-revd.dtb \
-    imx6ulz-14x14-evk-revd-btwifi.dtb \
-    imx6ulz-14x14-evk-revd-emmc.dtb \
-    imx6ulz-14x14-evk-revd-gpmi-weim.dtb \
+    imx6ulz-14x14-evk-reve.dtb \
+    imx6ulz-14x14-evk-reve-btwifi.dtb \
+    imx6ulz-14x14-evk-reve-emmc.dtb \
+    imx6ulz-14x14-evk-reve-gpmi-weim.dtb \
 "
 
 #imx7d val
