--- a/meta-bsp/conf/machine/imx91p-11x11-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx91p-11x11-lpddr4-evk.conf
@@ -11,6 +11,8 @@ require conf/machine/include/imx91-evk.inc
 KERNEL_DEVICETREE_BASENAME = "imx91p-11x11-evk"
 
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-aud-hat.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-mqs.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-mt9m114.dtb \
 "
 
