--- a/meta-bsp/conf/machine/imx91pevk.conf
+++ b/meta-bsp/conf/machine/imx91pevk.conf
@@ -10,5 +10,7 @@ require conf/machine/imx91p-9x9-lpddr4-qsb.conf
 # Include device trees for other boards for internal test
 KERNEL_DEVICETREE += " \
         freescale/imx91p-11x11-evk.dtb \
+        freescale/imx91p-11x11-evk-aud-hat.dtb \
+        freescale/imx91p-11x11-evk-mqs.dtb \
         freescale/imx91p-11x11-evk-mt9m114.dtb \
 "
