--- a/meta-bsp/conf/machine/imx91p-11x11-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx91p-11x11-lpddr4-evk.conf
@@ -14,6 +14,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-aud-hat.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-mqs.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-mt9m114.dtb \
+	freescale/${KERNEL_DEVICETREE_BASENAME}-ontat-wvga-panel.dtb \
 "
 
 UBOOT_CONFIG_BASENAME = "imx91p_11x11_evk"
