--- a/meta-bsp/conf/machine/imx91pevk.conf
+++ b/meta-bsp/conf/machine/imx91pevk.conf
@@ -13,4 +13,5 @@ KERNEL_DEVICETREE += " \
         freescale/imx91p-11x11-evk-aud-hat.dtb \
         freescale/imx91p-11x11-evk-mqs.dtb \
         freescale/imx91p-11x11-evk-mt9m114.dtb \
+		freescale/imx91p-11x11-evk-ontat-wvga-panel.dtb \
 "
