Add a dtb on imx93evk platform [YOCIMX-7183]
 - imx93-14x14-evk-flexspi-m2.dtb

Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
+++ b/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
@@ -12,6 +12,7 @@ KERNEL_DEVICETREE_BASENAME = "imx93-14x14-evk"
 
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-aud-hat.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-flexspi-m2.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-tja1103.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-mqs.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rm67199.dtb \
