imx8_all.conf: Update imx91p and imx93 dtbs [YOCIMX-7183]
Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -285,6 +285,7 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-11x11-evk-rpmsg-lpv.dtb \
                       freescale/imx93-14x14-evk.dtb \
                       freescale/imx93-14x14-evk-aud-hat.dtb \
+                      freescale/imx93-14x14-evk-flexspi-m2.dtb \
                       freescale/imx93-14x14-evk-lvds-it6263.dtb \
                       freescale/imx93-14x14-evk-tja1103.dtb \
                       freescale/imx93-14x14-evk-mqs.dtb \
@@ -299,6 +300,21 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-9x9-qsb-lpspi-slave.dtb \
                       freescale/imx93-9x9-qsb-mt9m114.dtb \
                       freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
+"
+
+# DEVICETREE of i.MX 91p
+KERNEL_DEVICETREE += "freescale/imx91p-11x11-evk.dtb \
+                      freescale/imx91p-11x11-evk-aud-hat.dtb \
+                      freescale/imx91p-11x11-evk-mqs.dtb \
+                      freescale/imx91p-11x11-evk-mt9m114.dtb \
+                      freescale/imx91p-11x11-evk-ontat-wvga-panel.dtb \
+                      freescale/imx91p-9x9-qsb-aud-hat.dtb \
+                      freescale/imx91p-9x9-qsb-flexspi-m2.dtb \
+                      freescale/imx91p-9x9-qsb-i3c.dtb \
+                      freescale/imx91p-9x9-qsb-lpspi-slave.dtb \
+                      freescale/imx91p-9x9-qsb-lpspi.dtb \
+                      freescale/imx91p-9x9-qsb-mt9m114.dtb \
+                      freescale/imx91p-9x9-qsb-spi-nand-m2.dtb \
 "
 
 UBOOT_MAKE_TARGET = \
